--- a/lib/gits_web/live/host_live/edit_event_templates/event_details.html.heex
+++ b/lib/gits_web/live/host_live/edit_event_templates/event_details.html.heex
@@ -73,5 +73,8 @@
         Save
       </span>
     </button>
+    <div class="flex justify-end grow">
+      <%= render_slot(@inner_block) %>
+    </div>
   </div>
 </.form>
