--- a/lib/gits_web/live/host_live/view_event_templates/overview.html.heex
+++ b/lib/gits_web/live/host_live/view_event_templates/overview.html.heex
@@ -1,1 +1,7 @@
-<div></div>
+<div class="grid grid-cols-6">
+  <div class="p-4 flex-col col-span-full flex justify-end h-52 border relative lg:rounded-xl">
+    <span class="text-zinc-400 absolute top-4">Conversion rate chart</span>
+    <span>Unique views</span>
+    <span>Total orders</span>
+  </div>
+</div>
