--- a/lib/gits_web/live/host_live/view_event_templates/attendees.html.heex
+++ b/lib/gits_web/live/host_live/view_event_templates/attendees.html.heex
@@ -1,7 +1,7 @@
 <div class="border overflow-hidden lg:rounded-lg">
-  <.table id="users" rows={[%{id: 1, username: "Sdu"}, %{id: 2, username: "Nkero"}]}>
-    <:col :let={user} label="Id"><%= user.id %></:col>
-    <:col :let={user} optional label="Username"><%= user.username %></:col>
+  <.table id="attendees" rows={@attendees}>
+    <:col :let={attendee} label="Name"><%= attendee.name %></:col>
+    <:col :let={attendee} label="Ticket"><%= attendee.ticket %></:col>
 
     <:action :let={_user}>
       <button class="border size-9 text-sm inline-flex items-center justify-center rounded-lg">
