``` feat: add orders and settings live views
- create new live views for orders and settings
- update router to include new live routes for
  tickets, orders, and settings
- refactor header component to accept user data
- enhance menu items with proper paths for navigation
- improve input component to support hint and description
- adjust layout styles for better responsiveness
```

--- a/lib/gits_web/live/storefront_live/event_listing.html.heex
+++ b/lib/gits_web/live/storefront_live/event_listing.html.heex
@@ -1,4 +1,4 @@
-<.header signed_in={not is_nil(@current_user)} />
+<.header user={@current_user} />
 <div class="mx-auto grid max-w-screen-xl gap-4 lg:grid-cols-[minmax(auto,48rem)_auto] lg:gap-x-12 lg:py-10">
   <div class="grid w-full max-w-3xl gap-4 p-2">
     <div class="bg-zinc-200x aspect-[3/2] w-full rounded-xl bg-zinc-200 sm:mx-auto sm:max-w-lg lg:max-w-full">
