--- a/lib/gits_web/components/layouts/app.html.heex
+++ b/lib/gits_web/components/layouts/app.html.heex
@@ -1,5 +1,7 @@
-<div class=" grid h-dvh grid-rows-[1fr_auto] overflow-hidden lg:h-auto lg:overflow-visible">
-  <div class="overflow-auto lg:overflow-visible">
+<.header user={@current_user} />
+<div class="grid min-h-[calc(100dvh-theme(space.72))] grid-rows-[1fr_auto] overflow-hidden  lg:overflow-visible">
+  <div class="overflow-auto lg:pt-8 lg:overflow-visible">
     <%= @inner_content %>
   </div>
 </div>
+<.footer />
