--- a/lib/gits_web/live/my_live/tickets.html.heex
+++ b/lib/gits_web/live/my_live/tickets.html.heex
@@ -94,3 +94,7 @@
     </dl>
   </li>
 </ul>
+
+<.modal id="view-ticket" show={@live_action == :show}>
+  <h3 class="text-lg font-semibold"><%= @page_title %></h3>
+</.modal>
