--- a/lib/gits_web/components/layouts/app.html.heex
+++ b/lib/gits_web/components/layouts/app.html.heex
@@ -1,6 +1,6 @@
 <.header user={@current_user} />
-<div class="grid min-h-[calc(100dvh-theme(space.72))] grid-rows-[1fr_auto] overflow-hidden  lg:overflow-visible">
-  <div class="overflow-auto lg:pt-8 lg:overflow-visible">
+<div class="grid min-h-[calc(100dvh-theme(space.72))] grid-rows-[1fr_auto]">
+  <div class="lg:pt-8">
     <%= @inner_content %>
   </div>
 </div>
