--- a/lib/gits_web/live/storefront_live/event_listing.html.heex
+++ b/lib/gits_web/live/storefront_live/event_listing.html.heex
@@ -1,100 +1,88 @@
-<div class="mx-auto grid max-w-screen-xl gap-4 lg:grid-cols-[minmax(auto,48rem)_auto] lg:gap-x-12 lg:py-10">
-  <div class="grid w-full max-w-3xl gap-4 p-2">
-    <div class="bg-zinc-200x aspect-[3/2] w-full rounded-xl bg-zinc-200 sm:mx-auto sm:max-w-lg lg:max-w-full">
+<.form
+  :let={f}
+  for={@form}
+  phx-submit="submit"
+  class="mx-auto grid max-w-screen-xl lg:px-6 gap-6 items-start gap-x-12 lg:grid-cols-[minmax(auto,48rem)_1fr]"
+>
+  <.inputs_for :let={ef} field={f[:order]}>
+    <.input :if={@current_user} type="hidden" value={@current_user.email} field={ef[:email]} />
+  </.inputs_for>
+  <Turnstile.widget
+    :if={@live_action == :index and is_nil(@current_user)}
+    events={[:success]}
+    class="absolute bottom-0 z-50"
+    appearance="interaction-only"
+  />
+
+  <div class="space-y-4 lg:row-span-3">
+    <div class="aspect-[3/2] lg:rounded-2xl bg-zinc-200"></div>
+  </div>
+  <div class="space-y-2 px-2">
+    <div :if={false} class="flex items-center gap-4">
+      <div class="flex items-center gap-2">
+        <.icon name="hero-calendar-days" class="size-5" />
+        <span class="text-sm"> Saturday 12 October 2024</span>
+      </div>
+      <span class="inline-flex items-center rounded-md bg-blue-50 px-2 py-1 text-xs font-medium text-blue-700 ring-1 ring-inset ring-blue-700/10">
+        You're going
+      </span>
+    </div>
+
+    <h1 class="text-2xl font-semibold"><%= @event.name %></h1>
+    <div :if={false} class="flex flex-wrap gap-4">
+      <!-- https://miafrica.net/event-categories-a-comprehensive-guide-to-understanding-types-of-events/ -->
+      <span
+        :for={i <- ["18+ Only", "Seminar"]}
+        class="inline-flex items-center gap-x-1.5 rounded-md px-2 py-1 text-xs font-medium text-gray-900 ring-1 ring-inset ring-gray-200"
+      >
+        <svg class="h-1.5 w-1.5 fill-zinc-900" viewBox="0 0 6 6" aria-hidden="true">
+          <circle cx="3" cy="3" r="3" />
+        </svg>
+        <%= i %>
+      </span>
+    </div>
+
+    <div class="grid gap-4">
+      <div :if={false} class="flex items-start gap-2">
+        <.icon name="hero-clock" class="size-5" />
+        <div class="grid text-zinc-700">
+          <span class="text-sm"> Starts at 2:00 PM</span>
+          <span class="text-sm"> Ends Sunday 13 October 2024, at 8:00 AM</span>
+        </div>
+      </div>
+
+      <div :if={false} class="flex items-start gap-2">
+        <.icon name="hero-map-pin" class="size-5" />
+        <div class="grid">
+          <span class="text-sm font-medium">Artistry JHB</span>
+          <span class="text-sm text-zinc-500">22 Fredman Dr, Sandown, Sandton 2196</span>
+        </div>
+      </div>
+
+      <div :if={false} class="flex items-start gap-2">
+        <.icon name="hero-megaphone" class="size-5" />
+        <div class="flex gap-1.5">
+          <span class="text-sm text-zinc-500">hosted by</span>
+          <span class="text-sm font-medium">Treehouse Inc</span>
+        </div>
+      </div>
+
+      <div :if={false} class="flex items-start gap-2">
+        <.icon name="hero-banknotes" class="size-5" />
+        <div class="">
+          <span class="text-sm text-zinc-500">
+            You can <span class="font-medium text-zinc-800">get a refund</span> if:
+          </span>
+          <ul class="list-disc text-sm text-zinc-500">
+            <li class="ml-6">it's within 24 hours of buying tickets</li>
+            <li class="ml-6">this event is rescheduled or cancelled</li>
+          </ul>
+        </div>
+      </div>
     </div>
   </div>
 
-  <.form :let={f} for={@form} class="lg:sticky bg-white p-2 lg:top-20" phx-submit="get_tickets">
-    <.inputs_for :let={ef} field={f[:order]}>
-      <.input :if={@current_user} type="hidden" value={@current_user.email} field={ef[:email]} />
-    </.inputs_for>
-    <Turnstile.widget
-      :if={@live_action == :index and is_nil(@current_user)}
-      events={[:success]}
-      class="absolute bottom-0 z-50"
-      appearance="interaction-only"
-    />
-    <div class="grid gap-4">
-      <div :if={false} class="flex items-center gap-4">
-        <span class="inline-flex items-center rounded-md bg-blue-50 px-2 py-1 text-xs font-medium text-blue-700 ring-1 ring-inset ring-blue-700/10">
-          You're going
-        </span>
-
-        <div class="flex items-center gap-2">
-          <.icon name="hero-calendar-days" class="size-5" />
-          <span class="text-sm"> Saturday 12 October 2024</span>
-        </div>
-      </div>
-
-      <h1 class="text-2xl font-semibold"><%= @event.name %></h1>
-      <div class="space-y-2">
-        <div :if={false} class="text-lg font-medium">
-          <span>R 50.00</span>
-          <span>&dash;</span>
-          <span>R 50.00</span>
-        </div>
-        <button
-          disabled={not @verified?}
-          class="w-full rounded-lg bg-zinc-950 p-4 text-zinc-50 disabled:bg-zinc-700"
-        >
-          <span class="font-semibold">Get tickets</span>
-        </button>
-      </div>
-
-      <div class="flex flex-wrap gap-4">
-        <!-- https://miafrica.net/event-categories-a-comprehensive-guide-to-understanding-types-of-events/ -->
-        <span
-          :for={i <- ["18+ Only", "Seminar"]}
-          class="inline-flex items-center gap-x-1.5 rounded-md px-2 py-1 text-xs font-medium text-gray-900 ring-1 ring-inset ring-gray-200"
-        >
-          <svg class="h-1.5 w-1.5 fill-zinc-900" viewBox="0 0 6 6" aria-hidden="true">
-            <circle cx="3" cy="3" r="3" />
-          </svg>
-          <%= i %>
-        </span>
-      </div>
-
-      <div class="grid gap-4">
-        <div class="flex items-start gap-2">
-          <.icon name="hero-clock" class="size-5" />
-          <div class="grid text-zinc-700">
-            <span class="text-sm"> Starts at 2:00 PM</span>
-            <span class="text-sm"> Ends Sunday 13 October 2024, at 8:00 AM</span>
-          </div>
-        </div>
-
-        <div class="flex items-start gap-2">
-          <.icon name="hero-map-pin" class="size-5" />
-          <div class="grid">
-            <span class="text-sm font-medium">Artistry JHB</span>
-            <span class="text-sm text-zinc-500">22 Fredman Dr, Sandown, Sandton 2196</span>
-          </div>
-        </div>
-
-        <div class="flex items-start gap-2">
-          <.icon name="hero-megaphone" class="size-5" />
-          <div class="flex gap-1.5">
-            <span class="text-sm text-zinc-500">hosted by</span>
-            <span class="text-sm font-medium">Treehouse Inc</span>
-          </div>
-        </div>
-
-        <div class="flex items-start gap-2">
-          <.icon name="hero-banknotes" class="size-5" />
-          <div class="">
-            <span class="text-sm text-zinc-500">
-              You can <span class="font-medium text-zinc-800">get a refund</span> if:
-            </span>
-            <ul class="list-disc text-sm text-zinc-500">
-              <li class="ml-6">it's within 24 hours of buying tickets</li>
-              <li class="ml-6">this event is rescheduled or cancelled</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </.form>
-  <div class="grid gap-2 p-2">
+  <div class="lg:row-start-4 px-2">
     <h3 class="text-lg font-medium">About this event</h3>
     <div :if={false} class="space-y-2 text-zinc-700">
       <p>
@@ -102,17 +90,19 @@
       </p>
     </div>
   </div>
-</div>
+
+  <div class="sticky items-center flex bottom-0 justify-end  gap-2  bg-white p-2 flex-wrap border-t lg:border border-zinc-100 lg:border-zinc-300 lg:rounded-xl lg:bottom-auto lg:top-6">
+    <.button disabled={not @verified?} size={:md} class="">
+      <span>Get tickets</span>
+    </.button>
+  </div>
+</.form>
 
 <.modal
+  :if={false}
   id="order-tickets"
   show={@live_action == :order}
   on_cancel={JS.patch(Routes.storefront_event_listing_path(@socket, :index, @event.public_id))}
 >
-  <.live_component
-    id={@order_id}
-    data-show={show_modal("order-tickets")}
-    module={GitsWeb.StorefrontLive.OrderComponent}
-    event_id={@event.public_id}
-  />
+  <.live_component id={@order_id} module={GitsWeb.StorefrontLive.OrderComponent} />
 </.modal>
