--- a/lib/gits_web/live/host_live/edit_event_templates/tickets.html.heex
+++ b/lib/gits_web/live/host_live/edit_event_templates/tickets.html.heex
@@ -55,7 +55,7 @@
         </button>
       </div>
     </div>
-    <div class="grid border gap-4 place-items-start rounded-xl p-4">
+    <div class="grid bg-zinc-50/50 border gap-4 place-items-start rounded-xl p-4">
       <h2 class="text-sm font-semibold text-zinc-700">Add more tickets</h2>
       <span class="text-sm text-zinc-500">
         You can add as many tickets types as you need for your event.
