--- a/lib/gits_web/live/storefront_live/event_listing.html.heex
+++ b/lib/gits_web/live/storefront_live/event_listing.html.heex
@@ -1,116 +1,96 @@
 <div class="mx-auto grid max-w-screen-xl items-start gap-4 gap-x-12 lg:grid-cols-[minmax(auto,48rem)_1fr] lg:gap-6 lg:pb-6">
-  <%= if @live_action == :index do %>
-    <div class="space-y-4 lg:row-span-3">
-      <div class="aspect-[3/2] bg-zinc-200 lg:rounded-2xl"></div>
-    </div>
+  <div class="space-y-4 lg:row-span-3">
+    <div class="aspect-[3/2] bg-zinc-200 lg:rounded-2xl"></div>
+  </div>
 
-    <div class="space-y-2 px-2">
-      <div class="flex items-center gap-4">
-        <div class="flex items-center gap-2">
-          <.icon name="hero-calendar-days" class="size-5" />
-          <span class="text-sm"> Saturday 12 October 2024</span>
-        </div>
-      </div>
-
-      <h1 class="text-2xl font-semibold"><%= @event.name %></h1>
-      <div class="flex flex-wrap gap-4">
-        <!-- https://miafrica.net/event-categories-a-comprehensive-guide-to-understanding-types-of-events/ -->
-        <span
-          :for={i <- ["18+ Only", "Seminar"]}
-          class="inline-flex items-center gap-x-1.5 rounded-md px-2 py-1 text-xs font-medium text-gray-900 ring-1 ring-inset ring-gray-200"
-        >
-          <svg class="h-1.5 w-1.5 fill-zinc-900" viewBox="0 0 6 6" aria-hidden="true">
-            <circle cx="3" cy="3" r="3" />
-          </svg>
-          <%= i %>
-        </span>
-      </div>
-
-      <div class="grid gap-4">
-        <div class="flex items-start gap-2 opacity-30">
-          <.icon name="hero-clock" class="size-5" />
-          <div class="grid text-zinc-700">
-            <span class="text-sm"> Starts at 2:00 PM</span>
-            <span class="text-sm"> Ends Sunday 13 October 2024, at 8:00 AM</span>
-          </div>
-        </div>
-
-        <div class="flex items-start gap-2 opacity-30">
-          <.icon name="hero-map-pin" class="size-5" />
-          <div class="grid">
-            <span class="text-sm font-medium">Artistry JHB</span>
-            <span class="text-sm text-zinc-500">22 Fredman Dr, Sandown, Sandton 2196</span>
-          </div>
-        </div>
-
-        <div class="flex items-start gap-2 opacity-30">
-          <.icon name="hero-megaphone" class="size-5" />
-          <div class="flex gap-1.5">
-            <span class="text-sm text-zinc-500">hosted by</span>
-            <span class="text-sm font-medium">Treehouse Inc</span>
-          </div>
-        </div>
-
-        <div class="flex items-start gap-2 opacity-30">
-          <.icon name="hero-banknotes" class="size-5" />
-          <div class="">
-            <span class="text-sm text-zinc-500">
-              You can <span class="font-medium text-zinc-800">get a refund</span> if:
-            </span>
-            <ul class="list-disc text-sm text-zinc-500">
-              <li class="ml-6">it's within 24 hours of buying tickets</li>
-              <li class="ml-6">this event is rescheduled or cancelled</li>
-            </ul>
-          </div>
-        </div>
+  <div class="space-y-2 px-2">
+    <div class="flex items-center gap-4">
+      <div class="flex items-center gap-2 opacity-30">
+        <.icon name="hero-calendar-days" class="size-5" />
+        <span class="text-sm"> Saturday 12 October 2024</span>
       </div>
     </div>
 
-    <.form
-      :let={f}
-      phx-submit="submit"
-      for={@form}
-      class="sticky bottom-0 top-0 z-20 flex flex-wrap place-items-start items-center lg:shadow-none border-t border-zinc-100 bg-white p-2 shadow-sm lg:bottom-auto lg:top-6 lg:border-none"
-    >
-      <.inputs_for :let={ef} field={f[:order]}>
-        <.input :if={@current_user} type="hidden" value={@current_user.email} field={ef[:email]} />
-      </.inputs_for>
-      <Turnstile.widget
-        :if={is_nil(@current_user)}
-        events={[:success]}
-        appearance="interaction-only"
-      />
+    <h1 class="text-2xl font-semibold"><%= @event.name %></h1>
+    <div class="flex flex-wrap gap-4 opacity-30">
+      <!-- https://miafrica.net/event-categories-a-comprehensive-guide-to-understanding-types-of-events/ -->
+      <span
+        :for={i <- ["18+ Only", "Seminar"]}
+        class="inline-flex items-center gap-x-1.5 rounded-md px-2 py-1 text-xs font-medium text-gray-900 ring-1 ring-inset ring-gray-200"
+      >
+        <svg class="h-1.5 w-1.5 fill-zinc-900" viewBox="0 0 6 6" aria-hidden="true">
+          <circle cx="3" cy="3" r="3" />
+        </svg>
+        <%= i %>
+      </span>
+    </div>
 
-      <.button disabled={not @verified?}>
-        <span>Get tickets</span>
-      </.button>
-    </.form>
+    <div class="grid gap-4">
+      <div class="flex items-start gap-2 opacity-30">
+        <.icon name="hero-clock" class="size-5" />
+        <div class="grid text-zinc-700">
+          <span class="text-sm"> Starts at 2:00 PM</span>
+          <span class="text-sm"> Ends Sunday 13 October 2024, at 8:00 AM</span>
+        </div>
+      </div>
 
-    <div class="px-2 lg:row-start-4">
-      <h3 class="text-lg font-medium">About this event</h3>
-      <div :if={false} class="space-y-2 text-zinc-700">
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda rem omnis vero, ea adipisci nulla praesentium illo magni sequi libero totam delectus voluptatum eaque repellendus soluta dicta incidunt, laudantium veniam!
-        </p>
+      <div class="flex items-start gap-2 opacity-30">
+        <.icon name="hero-map-pin" class="size-5" />
+        <div class="grid">
+          <span class="text-sm font-medium">Artistry JHB</span>
+          <span class="text-sm text-zinc-500">22 Fredman Dr, Sandown, Sandton 2196</span>
+        </div>
+      </div>
+
+      <div class="flex items-start gap-2 opacity-30">
+        <.icon name="hero-megaphone" class="size-5" />
+        <div class="flex gap-1.5">
+          <span class="text-sm text-zinc-500">hosted by</span>
+          <span class="text-sm font-medium">Treehouse Inc</span>
+        </div>
+      </div>
+
+      <div class="flex items-start gap-2 opacity-30">
+        <.icon name="hero-banknotes" class="size-5" />
+        <div class="">
+          <span class="text-sm text-zinc-500">
+            You can <span class="font-medium text-zinc-800">get a refund</span> if:
+          </span>
+          <ul class="list-disc text-sm text-zinc-500">
+            <li class="ml-6">it's within 24 hours of buying tickets</li>
+            <li class="ml-6">this event is rescheduled or cancelled</li>
+          </ul>
+        </div>
       </div>
     </div>
-  <% end %>
+  </div>
 
-  <%= if @live_action == :order do %>
-    <div class="row-span-2">
-      get tickets
-    </div>
+  <.form
+    :let={f}
+    phx-submit="submit"
+    for={@form}
+    class="sticky bottom-0 top-0 z-20 flex flex-wrap place-items-start items-center border-t border-zinc-100 bg-white p-2 shadow-sm lg:bottom-auto lg:top-6 lg:border-none lg:shadow-none"
+  >
+    <.inputs_for :let={ef} field={f[:order]}>
+      <.input :if={@current_user} type="hidden" value={@current_user.email} field={ef[:email]} />
+    </.inputs_for>
+    <Turnstile.widget
+      :if={is_nil(@current_user)}
+      events={[:success]}
+      appearance="interaction-only"
+    />
 
-    <div>
-      order summary
-    </div>
+    <.button disabled={not @verified?}>
+      <span>Get tickets</span>
+    </.button>
+  </.form>
 
-    <div>
-      controls
+  <div class="px-2 lg:row-start-4">
+    <h3 class="text-lg font-medium">About this event</h3>
+    <div class="space-y-2 text-zinc-700 opacity-30">
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda rem omnis vero, ea adipisci nulla praesentium illo magni sequi libero totam delectus voluptatum eaque repellendus soluta dicta incidunt, laudantium veniam!
+      </p>
     </div>
-  <% end %>
+  </div>
 </div>
-
-<.modal :if={not is_nil(@order)} id="order-tickets" show={@order.state == :processed}>
-  <.live_component :if={false} id={@order.id} module={GitsWeb.StorefrontLive.OrderComponent} />
-</.modal>
