--- a/lib/gits_web/live/storefront_live/event_order.html.heex
+++ b/lib/gits_web/live/storefront_live/event_order.html.heex
@@ -108,52 +108,60 @@
   </div>
 
   <div class="p-2">
-    <div class="grid max-w-lg grow gap-8 rounded-xl bg-zinc-100 p-4 lg:px-8 lg:py-10">
+    <div class="grid max-w-lg grow gap-8 rounded-xl bg-zinc-100/70 p-4 lg:px-8 lg:py-10">
       <h3 class="text-lg font-semibold lg:col-span-full">Order Summary</h3>
       <dl class="grid gap-6 text-sm/6">
-        <div class="grid justify-between gap-2">
+        <div :if={@order.email} class="grid gap-1">
+          <dt class="font-medium text-gray-600">Customer</dt>
+          <dd class="text-zinc-500">
+            john.doe@bar.com
+          </dd>
+        </div>
+
+        <div class="grid gap-1">
           <dt class="font-medium text-gray-600">Event</dt>
           <dd class="text-gray-500">
             <%= @event.name %>
           </dd>
         </div>
 
-        <div :if={false} class="grid justify-between gap-2">
-          <dt class="font-medium text-gray-600">Customer</dt>
-          <dd class="flex items-center gap-4">
-            <div class="size-10 rounded-full bg-zinc-300"></div>
-            <div class="grid gap-1 text-sm font-medium">
-              <span>John Doe</span>
-              <span class="text-zinc-500">john.doe@bar.com</span>
+        <div :if={Enum.any?(@tickets_summary)} class="grid gap-1">
+          <dt class="font-medium text-gray-600">Tickets</dt>
+          <dd class="text-gray-500 divide-y">
+            <div :for={{name, price, count} <- @tickets_summary} class="py-2">
+              <div class="flex justify-between">
+                <span><%= count %> &times; <%= name %></span>
+                <span class="font-medium text-zinc-800">R <%= price %></span>
+              </div>
             </div>
-          </dd>
-        </div>
-
-        <div :if={false} class="grid justify-between gap-2">
-          <dt class="font-medium text-gray-600">Customer</dt>
-          <dd class="flex items-center gap-4">
-            <div class="grid gap-1 text-sm font-medium">
-              <!-- <span>John Doe</span> -->
-              <span class="text-zinc-500">john.doe@bar.com</span>
+            <div class="flex text-zinc-950 font-medium justify-end py-4">
+              <span>Total R <%= @tickets_total %></span>
             </div>
           </dd>
         </div>
       </dl>
+      <div class="grid text-right">
+        <span>Payment total</span>
+        <span class="text-2xl font-medium">R <%= @tickets_total %></span>
+      </div>
     </div>
   </div>
 
   <%= if @order.state == :processed do %>
-    <.form
-      :let={f}
-      phx-submit="confirm"
-      for={@confirm_form}
-      class="sticky bottom-0 top-0 z-20 items-center border-t border-zinc-100 bg-white p-2 shadow-sm lg:bottom-auto lg:top-6 gap-4 grid lg:border-none lg:shadow-none"
-    >
+    <.form :let={f} phx-submit="confirm" for={@confirm_form} class="items-center  p-2 gap-4 grid">
       <div class="flex">
         <.button>
           <span>Confirm Order</span>
         </.button>
       </div>
     </.form>
+  <% end %>
+
+  <%= if @order.state == :completed do %>
+    <div class="flex p-2">
+      <.button>
+        <span>Request a refund</span>
+      </.button>
+    </div>
   <% end %>
 </div>
