--- a/lib/gits_web/controllers/email_html/magic_link.html.heex
+++ b/lib/gits_web/controllers/email_html/magic_link.html.heex
@@ -1,13 +1,13 @@
 <.layout>
-  <h1 class="text-2xl font-semibold">Hey! Welcome back!</h1>
-  <p class="text-zinc-700 text-sm mt-4">
+  <h1 class="text-2xl font-semibold py-4">Hey! Welcome back!</h1>
+  <p class="text-zinc-700 text-sm py-4">
     To finish signing in, click the button below. If you did not request this email, you can safely ignore it.
   </p>
 
   <.link
     href={static_url(GitsWeb.Endpoint, "/auth/user/magic_link/?token=#{@token}")}
     target="_blank"
-    class="bg-zinc-950 px-4 py-2 rounded-lg inline-flex mt-4 text-sm text-white"
+    class="bg-zinc-950 px-4 py-2 font-semibold rounded-lg inline-flex text-sm text-white"
   >
     Sign in
   </.link>
