account to settings

--- a/lib/gits_web/controllers/email_html/layout.html.heex
+++ b/lib/gits_web/controllers/email_html/layout.html.heex
@@ -90,10 +90,10 @@
                     </a>
                     &bull;
                     <a
-                      href={url(GitsWeb.Endpoint, ~p"/my/account")}
+                      href={url(GitsWeb.Endpoint, ~p"/my/settings")}
                       style="margin-left: 4px; margin-right: 4px; color: #71717a; text-decoration: none"
                     >
-                      Account
+                      Settings
                     </a>
                     &bull;
                     <a
