--- a/lib/gits_web/live/my_live/settings.html.heex
+++ b/lib/gits_web/live/my_live/settings.html.heex
@@ -5,7 +5,7 @@
       <.link
         :for={
           {name, icon} <-
-            [{:account, "i-lucide-user"}, {:partner, "i-lucide-handshake"}] |> Enum.take(1)
+            [{:account, "i-lucide-user"}, {:partner, "i-lucide-handshake"}]
         }
         navigate={Routes.my_settings_path(@socket, name)}
         aria-selected={"#{name == @live_action}"}
@@ -49,6 +49,50 @@
           </button>
         </div>
       </div>
+    </div>
+
+    <div :if={@live_action == :partner} class="mx-auto w-full max-w-screen-sm space-y-8">
+      <h2 class="text-sm font-medium text-gray-500">Host as:</h2>
+      <ul role="list" class="mt-3 grid grid-cols-1 gap-5 sm:grid-cols-2 sm:gap-6 lg:grid-cols-2">
+        <li :for={host <- @hosts} class="col-span-1 flex rounded-md shadow-sm">
+          <div class="flex w-16 shrink-0 items-center justify-center rounded-l-md bg-zinc-800 text-sm font-medium text-white">
+            <%= host.name
+            |> String.split()
+            |> Enum.map(&String.first(&1))
+            |> Enum.join()
+            |> String.upcase() %>
+          </div>
+          <div class="flex flex-1 items-center justify-between truncate rounded-r-md border-b border-r border-t border-gray-200 bg-white">
+            <div class="flex-1 truncate px-4 py-2 text-sm">
+              <a
+                href={Routes.host_dashboard_path(@socket, :overview, host.handle)}
+                class="font-medium text-gray-900 hover:text-gray-600"
+              >
+                <%= host.name %>
+              </a>
+              <p class="text-gray-500">Owner</p>
+            </div>
+            <div class="shrink-0 pr-2">
+              <button
+                :if={false}
+                type="button"
+                class="inline-flex size-8 items-center justify-center rounded-full bg-transparent bg-white text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2"
+              >
+                <span class="sr-only">Open options</span>
+                <svg
+                  class="size-5"
+                  viewBox="0 0 20 20"
+                  fill="currentColor"
+                  aria-hidden="true"
+                  data-slot="icon"
+                >
+                  <path d="M10 3a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM10 8.5a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM11.5 15.5a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0Z" />
+                </svg>
+              </button>
+            </div>
+          </div>
+        </li>
+      </ul>
     </div>
   </div>
 </div>
