--- a/lib/gits_web/live/storefront_live/event_order.html.heex
+++ b/lib/gits_web/live/storefront_live/event_order.html.heex
@@ -65,7 +65,7 @@
         phx-submit="process"
         phx-change="validate"
         for={@process_form}
-        class="sticky bottom-0 top-0 z-20 items-center border-t border-zinc-100 bg-white p-2 shadow-sm lg:bottom-auto lg:top-6 gap-4 grid lg:border-none lg:shadow-none"
+        class="sticky bottom-0 top-0 z-20 grid items-center gap-4 border-t border-zinc-100 bg-white p-2 shadow-sm lg:bottom-auto lg:top-6 lg:border-none lg:shadow-none"
       >
         <.input field={f[:email]} type="email" label="Email address" />
         <div class="flex">
@@ -128,14 +128,14 @@
         <%= if Enum.any?(@tickets_summary) do %>
           <div class="grid gap-1">
             <dt class="font-medium text-gray-600">Tickets</dt>
-            <dd class="text-gray-500 divide-y">
+            <dd class="divide-y text-gray-500">
               <div :for={{name, price, count} <- @tickets_summary} class="py-2">
                 <div class="flex justify-between">
                   <span><%= count %> &times; <%= name %></span>
                   <span class="font-medium text-zinc-800">R <%= price %></span>
                 </div>
               </div>
-              <div class="flex text-zinc-950 font-medium justify-end py-4">
+              <div class="flex justify-end py-4 font-medium text-zinc-950">
                 <span>Total R <%= @tickets_total %></span>
               </div>
             </dd>
@@ -153,7 +153,7 @@
   </div>
 
   <%= if @order.state == :processed do %>
-    <.form :let={f} phx-submit="confirm" for={@confirm_form} class="items-center  p-2 gap-4 grid">
+    <.form :let={f} phx-submit="confirm" for={@confirm_form} class="grid  items-center gap-4 p-2">
       <div class="flex">
         <.button>
           <span>Confirm Order</span>
@@ -163,8 +163,12 @@
   <% end %>
 
   <%= if @order.state == :completed do %>
-    <div class="flex p-2">
+    <div class="flex gap-4 p-2">
       <.button>
+        <span>View tickets</span>
+      </.button>
+
+      <.button variant={:subtle}>
         <span>Request a refund</span>
       </.button>
     </div>
