feat: update email rendering and add order confirmation
- change `render` in `gitsweb.emailcontroller` to use
  `:order_confirmation` template.
- add new `order_confirmation.html.heex` for order details.
- update confirmation message in `event_order.html.heex`
  to reflect successful order placement.

--- a/lib/gits_web/live/storefront_live/event_order.html.heex
+++ b/lib/gits_web/live/storefront_live/event_order.html.heex
@@ -102,7 +102,7 @@
       </div>
 
       <p class=" text-sm text-zinc-700">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam voluptatem dolorem reprehenderit.
+        Your order has been placed successfully. We've also sent a confirmation email with these details to your email address.
       </p>
     <% end %>
   </div>
@@ -134,9 +134,6 @@
                   <span><%= count %> &times; <%= name %></span>
                   <span class="font-medium text-zinc-800">R <%= price %></span>
                 </div>
-              </div>
-              <div class="flex justify-end py-4 font-medium text-zinc-950">
-                <span>Total R <%= @tickets_total %></span>
               </div>
             </dd>
           </div>
